# llm-ebook-summarizer

./: .gitignore  README.md  constants.py  epub_extractor.py  llm.py  main.py  merge_markdowns.py  pdf_extractor.py  pyproject.toml  requirements.txt  translate.py  utils.py
