[project]
name = ""
version = "0.0.1"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==4.0.3",
    "attrs==24.3.0",
    "beautifulsoup4==4.12.3",
    "bitsandbytes>=0.49.0",
    "bs4>=0.0.2",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "ebooklib==0.18",
    "exceptiongroup==1.2.2",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.27.2",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "lxml==5.3.0",
    "multidict==6.1.0",
    "numpy==1.26.4",
    "orjson==3.10.15",
    "packaging==24.2",
    "propcache==0.2.1",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "tenacity==9.0.0",
    "torch>=2.9.1",
    "torch-c-dlpack-ext>=0.1.4",
    "torchvision>=0.24.1",
    "tqdm==4.67.1",
    "transformers>=4.57.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "yarl==1.18.3",
]

[tool.uv]
package = false
